--- a/assets/main.css
+++ b/assets/main.css
@@ -36,8 +36,10 @@ ol, ul {
 blockquote, q {
   quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before, 
+blockquote:after, 
+q:before, 
+q:after {
   content: '';
   content: none;
 }
@@ -52,18 +54,24 @@ GRID
 ================================
 */
 
-*, *:before, *:after {
+*, 
+*:before, 
+*:after {
   -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
 }
 
-.container {
+.container,
+.grid {
   width: 960px;
-  margin: 0 auto;
+  margin: 0 auto;}
+
+.container {
   padding-left: 30px;
   padding-right: 30px;
 }
+
 
 /* ============================
 TYPOGRAPHY
@@ -96,3 +104,61 @@ Home
 .hero {
   padding: 22px 80px 66px 80px;
 }
+
+/*=======================
+Clearfix
+===========================*/
+.group:before, 
+.group:after {
+  content: "";
+  display: table;
+}
+.group:after {
+  clear: both;
+}
+.group {
+  clear: both;
+  *zoom: 1;
+}
+
+/*===========================
+Primary header
+===========================*/
+
+.logo { 
+  float: left;
+  border-top: 4px solid #648880;
+  padding: 40px 0 22px 0; }
+
+/*==============================
+Primary footer
+===============================*/
+.primary-footer small {
+  float: left;
+}
+.primary-footer { 
+  padding-bottom: 44px;
+  padding-top: 44px;
+}
+
+/*================================
+Reusable Layouts
+=================================*/
+.col-1-3 {
+  width: 33.33%;
+}
+.col-2-3 {
+  width: 66.66%;
+}
+.col-1-3, 
+.col-2-3 {
+  display: inline-block;
+  vertical-align: top;
+}
+.grid, 
+.col-1-3, 
+.col-2-3 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+/*grid width and margin are added to container up*/
