--- a/assets/main.css
+++ b/assets/main.css
@@ -103,6 +103,8 @@ Home
 */
 .hero {
   padding: 22px 80px 66px 80px;
+  line-height: 44px;
+  text-align: center;
 }
 
 /*=======================
@@ -169,7 +171,7 @@ Custom Styles
 
 body {
   color: #888;
-  font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 h1, h2, h3, h4 {
   color: #644880;
@@ -193,6 +195,7 @@ h5 {
   color: #a9b2b9;
   font-size: 14px;
   font-weight: 400;
+  text-transform: uppercase;
 }
 strong {
   font-weight: 400;
@@ -207,20 +210,31 @@ a:hover {
   color: #a9b2b9;
 }
 a {
-  color: #648880; }
+  color: #648880;
+  text-decoration: none;
+  }
+  p a {
+    border-bottom: 1px solid #dfe2e5;
+  }
 .logo {
   border-top: 4px solid #648880;
   float: left;
   font-size: 48px;
   line-height: 44px;
   padding: 40px 0 22px 0;
+  font-weight: 100;
+  letter-spacing: .5px;
+  text-transform: uppercase;
 }
 .tagline {
   margin: 66px  0 22px 0;
+  text-align: right;
 }
 .primary-nav {
   font-size: 14px;
   font-weight: 400;
+  letter-spacing: .5px;
+  text-transform: uppercase;
 }
 .primary-footer {
   color: #648880;
@@ -241,7 +255,14 @@ a {
 }
 .hero p {
   font-size: 24px;
+  font-weight: 100;
 }
 .teaser a:hover h3 {
   color: #a9b2b9;
+}
+/*=============================
+Navigation
+=============================*/
+.nav {
+  text-align: right;
 }
