--- a/assets/main.css
+++ b/assets/main.css
@@ -90,21 +90,19 @@ Buttons
   border-radius: 5px;
   display: inline-block;
   margin: 0;
+  text-transform: uppercase;
+  color: #fff;
+  cursor: pointer;
+  font-weight: 400;
+  letter-spacing: .5px;
 }
 .btn-alt {
-  border: 1px solid #dfe2e5;
+  border: 1px solid #fff;
   padding: 10px 30px;
 }
-
-/*
-======================
-Home
-======================
-*/
-.hero {
-  padding: 22px 80px 66px 80px;
-  line-height: 44px;
-  text-align: center;
+.btn-alt:hover {
+  background: #fff;
+  color: #648880;
 }
 
 /*=======================
@@ -170,6 +168,7 @@ Custom Styles
 =======================================*/
 
 body {
+  background: #292f50;
   color: #888;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -246,9 +245,16 @@ a {
   float: left;
   font-weight: 400;
 }
+/*
+======================
+Home
+======================
+*/
 .hero {
-  line-height: 44px;
+  color: #fff;
   padding: 22px 80px 66px 80px;
+  line-height: 44px;
+  text-align: center;
 }
 .hero h2 {
   font-size: 24px;
@@ -265,4 +271,40 @@ Navigation
 =============================*/
 .nav {
   text-align: right;
+}
+.primary-header a,
+.primary-header a {
+  color: #fff;
+}
+.primary-header a:hover,
+.primary-header a:hover {
+  color: #648880;
+}
+/*===============================
+Rows
+=================================*/
+.row {
+  background: #fff;
+  min-width: 960px;
+  padding: 66px 0 44px 0;
+}
+.row-alt {
+  min-width: 960px;
+  background: #cbe2c1;
+  background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+  padding: 44px 0 22px 0;
+}
+
+/* ======================================
+Leads
+======================================
+*/
+.lead {
+  text-align: center;
+}
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
 }
