--- a/assets/main.css
+++ b/assets/main.css
@@ -280,6 +280,14 @@ Navigation
 .primary-header a:hover {
   color: #648880;
 }
+.nav li {
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: top;
+}
+.nav li:last-child {
+  margin-right: 0;
+}
 /*===============================
 Rows
 =================================*/
@@ -307,4 +315,18 @@ Leads
 .lead p {
   font-size: 21px;
   line-height: 33px;
+}
+
+/*====================================
+Speakers 
+====================================*/
+.speaker-info {
+  border: 1px solid #dfe2e5;
+  border-radius: 5px;
+  margin-top: 88px;
+  padding: 22px 0;
+  text-align: center;
+}
+.speaker {
+  margin-bottom: 44px;
 }
